got a question to pop up with answers in the buttons

--- a/style/style.css
+++ b/style/style.css
@@ -1,3 +1,12 @@
+:root {
+  --hue-neutral: hsl(180, 96%, 100%);
+  --hue-wrong: hsl(350, 96%, 47%);
+  --hue-correct: hsl(102, 96%, 58%);
+}
+body {
+  --hue: var(--hue-neutral);
+  background-color: hsl(180, 96%, 100%);
+}
 .container {
   width: 800px;
   margin-top: 100px;
@@ -16,5 +25,5 @@
   background-color: blueviolet;
 }
 .btn:hover {
-    border-color: black;
+  border-color: black;
 }
